# demo-py-module

./: README.md  pyproject.toml
src/sample_module/: __init__.py
tests/: test_sample_module.py
